src/components/body.module.css
.bodyContainer{
    display: flex;
    width: 100%;
    min-height: 100vh;
    height: auto;
    padding-top: 40px;
}

.bodyLeft{
    display: flexbox;
    width: 35vw;
    height: auto;
    gap: 4px;
    min-height: 100%;
    position: fixed;
}

.bodyRight{
    margin-left: 35vw;
    width: 65vw;
    display: flex;
    align-items: start;   
    border-left: solid 4px black;
}

.bodyLeftTop{
    display: flex;
    width: 100%;
    justify-content: flex-start;
    flex-direction: column;
}

.bodySearchBar{
    border-bottom: solid 4px black;
    display: flex;
    width: 100%;
    flex-direction: column;
    padding: 4px;
}

.bodyLeftBottom{
    padding: 4px;
    max-width: 30vw;
    position: relative;
}

.treeNav{
    display: block;
    white-space: nowrap;
    color: black;
    position: relative;
    
}

.treeNav.isExpandable::before{
    border-left:  1px solid #333;
    content: "";
    height: 100%;
    position: absolute;
}

.treeNav>.treeNav{
    margin-left: 8px;
}

.treeNav.treeNav.isExpandable[open]>.treeNavTitle::before{
    transform: rotate(90deg);
}

.treeNav.treeNav.isExpandable>.treeNavTitle{
    padding-left: 4px;
    margin-bottom: 4px;

}


.treeNavTitle{
    cursor: pointer;
    display: block;
}

.treeNavTitleDiv{
    display: flex;
    flex-direction: column;
    padding-left: 12px;
    gap: 4px;

}

.bodyRight{
    display: flex;
    flex-direction: column;
    ;
}

.bodyRightTop{
    border-bottom: solid 2px black;
    display: flex;
    width: 100%;
    padding: 4px;
    position: fixed;
    background: white;
}

.bodyRightBottom{
    padding-top: 20px;
    margin: 4px;
    padding-left: 4px;
    text-align: justify;
    display: flex;
    flex-direction: column;
    line-height: 1.5;
}

